fix random scrollbars

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -1,7 +1,12 @@
+html {
+	height: 100%;
+}
+
 body {
 	background: #1D252C;
 	padding: 20px 50px;
 	margin: 0px;
+	height: calc(100% - 40px);
 }
 
 /* textarea */
@@ -12,7 +17,7 @@ textarea {
 	color: #6B8397;
 	padding: 0px;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 40px);
 	font-family: monospace;
 	outline: none;
 	resize: none;
@@ -38,12 +43,12 @@ textarea {
 
 #box {
 	padding: 0px;
-	margin: 0px;
+	margin: 0 0 40px 0;
 	width: 100%;
 	border: 0px;
 	outline: none;
 	font-size: 13px;
-  overflow: inherit;
+	overflow: inherit;
 }
 
 #box code {
